cfunctions-0.27/tests/bad-glocal.c
// options: -l jub -g jub
// error: the same as the global name

int jubbls;
